# push-to-talk-claude

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.default.yaml  pyproject.toml  test_audio_capture.py  test_ui_modules.py
.claude/: settings.local.json
.claude/commands/: tts.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md  workflow.md
docs/: claude-code-hook-setup.md  configuration.md  troubleshooting.md
hooks/: claude-response-hook.sh
scripts/: check-permissions.sh  install-brew-deps.sh  install-claude-tts-hook.sh  install.sh
specs/001-voice-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-interface/checklists/: requirements.md
specs/001-voice-interface/contracts/: interfaces.md
specs/002-textual-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-textual-tui/checklists/: requirements.md
specs/002-textual-tui/contracts/: widget-interfaces.md
specs/003-auto-return-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auto-return-config/checklists/: requirements.md
specs/004-tts-response-hook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tts-response-hook/checklists/: requirements.md
specs/004-tts-response-hook/contracts/: hook-script-interface.md  summarizer-api.md  tui-toggle-api.md
specs/005-dev-workflow/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dev-workflow/checklists/: requirements.md
src/push_to_talk_claude/: __init__.py  __main__.py  app.py
src/push_to_talk_claude/core/: audio_capture.py  (+6 more)
tests/hooks/: __init__.py  test_summarizer.py
tests/integration/: __init__.py  test_tui_integration.py
(+29 files in other folders)
